フロントエンド、バックエンドの指摘対応